now fetching forecast data

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
 
 <h1>Your Weather</h1>
 
-<form id="loc-search-form" method="GET">
+<p>For now, use another tool, like <a href="https://www.gps-coordinates.net/">gps-coordinates.net</a>, if you don't know
+    the latitude and longitude for a location.</p>
+
+<form id="loc-search-form" method="POST">
     {{ form.hidden_tag() }}
 
     {% for field in form if field.widget.input_type != 'hidden'%}
