--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,28 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="/">Your Weather</a>
-        <ul class="navbar-nav">
-            <!-- <li class="nav-item"><a class="nav-link" href="/playlists">Playlists</a></li> -->
-            <!-- <li class="nav-item"><a class="nav-link" href="/songs">Songs</a></li> -->
-        </ul>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Your Weather</a>
+            {% if not at_root %}
+            <form class="d-flex" id="loc-search-form" method="POST">
+                {{ loc_form.hidden_tag() }}
+                <div class="input-group">
+                    {{ loc_form.location(class_="form-control", placeholder="Location") }}
+                    {{ loc_form.search(class_="btn btn-success") }}
+                </div>
+            </form>
+            {% endif %}
+            <ul class="navbar-nav me-2 mb-2 mb-md-0">
+                {% if not g.user %}
+                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                {% else %}
+                <li class="nav-item navbar-text">{{ g.user.email }}</li>
+                <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </nav>
 
 
