--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-        <div class="container-fluid">
+        <div class="container-md">
             <a class="navbar-brand" href="/">Your Weather</a>
             {% if not at_root %}
             <form class="d-flex" id="loc-search-form" method="POST">
